--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
         <a href="about.html">About</a>
         <a href="menu.html">Menu</a>
         <a href="contact.html">Contact</a>
-        <i class="fas fa-times closeMobileNav"></i>    
+        <i class="fas fa-times closeMobileNav"></i> 
+        <a href="addtocart.html" button class="add-to-cart-btn">Cart</button> </a>
     </div>
+    
+
     <i class="fas fa-bars hamburgerMenu"></i>
   </header>
 <!-- end of header -->
@@ -69,18 +72,22 @@
       <h3>Drip Coffee</h3>
       <p id="menu-grid">A classic method of brewing coffee using a coffee maker, which drips hot water through a filter filled with ground coffee beans.</p>
       <p class="price-text">P80</p>
+      <button class="add-to-cart-button">Add to Cart</button>
     </div>
     <div class="menu-item">
       <img src="img/espresso.jpg" alt="coffee 2">
       <h3>Espresso</h3>
       <p id="menu-grid">A concentrated shot of coffee made by forcing pressurized hot water through finely ground coffee beans. Espresso has a strong and bold flavor.</p>
       <p class="price-text">P85</p>
+      <button class="add-to-cart-button">Add to Cart</button>
     </div>
     <div class="menu-item">
       <img src="img/cappuccino.jpg" alt="coffee 3">
       <h3>americano</h3>
       <p id="menu-grid">A simple coffee made by adding hot water to a shot of espresso. This creates a longer, milder coffee.</p>
       <p class="price-text">P80</p>
+      <button class="add-to-cart-button">Add to Cart</button>
+
     </div>
   </div>
   <div class="menu-row">
@@ -89,12 +96,14 @@
       <h3>Iced Coffee</h3>
       <p id="menu-grid"> a classic cold coffee made by brewing coffee using hot water and then cooling it down with ice. It is usually served with milk and sugar.</p>
       <p class="price-text">P70</p>
+      <button class="add-to-cart-button">Add to Cart</button>
     </div>
     <div class="menu-item">
       <img src="img/cold coffe 3.jfif" alt="coffee 5">
       <h3>Cold Brew Coffee</h3>
       <p id="menu-grid">Cold brew coffee is made by steeping coarsely ground coffee in cold water for 12-24 hours. This process results in a smooth, less acidic coffee with a sweeter flavor.</p>
       <p class="price-text">P90</p>
+      <button class="add-to-cart-button">Add to Cart</button>
     </div>
     <div class="menu-item">
       <img src="img/americano.jpg" alt="coffee 6">
@@ -102,6 +111,8 @@
       <p id="menu-grid">made by infusing cold brew coffee with nitrogen gas, resulting in a creamy, foamy texture similar to that of a beer. It has a smooth and velvety mouthfeel.
       </p>
       <p class="price-text">P85</p>
+      <button class="add-to-cart-button">Add to Cart</button>
+
     </div>
     
   </div>
