--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
           our e-shop or through our delivery services.
         </p>
         <div class="about-btn">
-          <a href="gallery.html" class="btn">Our Gallery</a>
+          <a href="menu.html" class="btn">Our Menu</a>
           <a href="contact.html" class="btn">Contact Us</a>
         </div>
       </div>
